Chat, Entrada na sala e Envio de mensagens concluídos

--- a/index.html
+++ b/index.html
@@ -19,27 +19,14 @@
         <img src="./images/logo 1.png" />
         <ion-icon name="people-sharp"></ion-icon>
       </div>
-      <div class="chat">
-        <div>
-          <p>(09:21:45) João entra na sala...</p>
-        </div>
-        <div>
-          <p>(09:22:28) João para Todos: Bom dia</p>
-        </div>
-        <div>
-          <p>(09:22:38) Maria para João: Oi João :)</p>
-        </div>
-        <div>
-          <p>(09:22:48) João reservadamente para Maria: Oi gatinha quer tc?</p>
-        </div>
-        <div>
-          <p>(09:22:58) Maria sai da sala...</p>
-        </div>
-      </div>
+      <div class="chat"></div>
       <div class="caixaMensagem">
         <div>
           <input type="text" placeholder="Escreva aqui..." />
-          <ion-icon name="paper-plane-outline"></ion-icon>
+          <ion-icon
+            onclick="enviarMensagem()"
+            name="paper-plane-outline"
+          ></ion-icon>
         </div>
         <div></div>
       </div>
