Chat e Contatos Otimizados (V1)

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="telaInicial">
       <div class="loading escondido">
-        <img src="./images/loading.gif" alt="loading" />
+        <img src="./images/Spin-1s-200px (1).gif" alt="loading" />
         <h3>Entrando</h3>
       </div>
       <div class="telaLogin">
@@ -30,7 +30,7 @@
         <div class="entrar" onclick="login()"><h2>Entrar</h2></div>
       </div>
     </div>
-    <div class="menu escondido transicao">
+    <div class="menu escondido">
       <div class="tela1" onclick="esconder()"></div>
       <div class="tela2">
         <div class="tela2-topo">
