Chat e Contatos otimizados (V2)

--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
             <ion-icon name="lock-open"></ion-icon>
             <h5>Público</h5>
           </div>
-          <ion-icon class="setinha" name="checkmark-sharp"></ion-icon>
+          <ion-icon
+            class="setinha selecionado2 defaultVisibilidade"
+            name="checkmark-sharp"
+          ></ion-icon>
         </div>
         <div onclick="selecionarVisibilidade(this)" class="ajuste3">
           <div class="centralizar">
